Add an optional options object to the validate request (USPS CASS)
